# mdir_project

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run.py
assets/: index-BGcJnj8N.js  index-D82NvNxO.css
docs/: .pdca-status.json
docs/.pdca-snapshots/: snapshot-1772063466764.json  snapshot-1772066943450.json
docs/02-design/: security-spec.md
docs/04-report/: CHANGELOG.md
docs/archive/2026-02/: _INDEX.md
docs/archive/2026-02/mdir-tui/: mdir-tui.analysis.md  mdir-tui.design.md  mdir-tui.plan.md  mdir-tui.report.md
src/mdir/: __init__.py  app.py
src/mdir/models/: file_item.py
src/mdir/operations/: copy.py  delete.py  exceptions.py  move.py
src/mdir/panels/: dialogs.py  file_panel.py  status_bar.py
src/mdir/styles/: mdir.tcss
tests/: test_file_item.py  test_operations.py
website/: index.html  package-lock.json  package.json  tailwind.config.js
website/src/: App.css  App.jsx  index.css
website/src/components/: Features.jsx  Footer.jsx  Hero.jsx  Install.jsx  KeyBindings.jsx  Nav.jsx  Security.jsx  TUIPreview.jsx  TechStack.jsx
