[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdir-tui"
version = "0.1.0"
description = "Modern two-panel TUI file manager inspired by mdir/Midnight Commander"
authors = [{ name = "kim" }]
requires-python = ">=3.13"
dependencies = [
    "textual>=0.89.0",
    "send2trash>=1.8.3",
    "watchfiles>=1.0.0",
]

[project.scripts]
mdir = "mdir.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mdir"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mdir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
